<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <FrameLayout
            android:id="@+id/imageHolder"
            android:layout_width="match_parent"
            android:layout_height="200dp">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iconImageView"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/BottomRoundedCorners"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circled_semi_black"/>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/container_horizontal_padding"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bold_subtitle"
                android:text="@string/prompt_hint"/>
            <EditText
                android:id="@+id/promptEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_hint"
                android:inputType="text" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bold_subtitle"
                android:text="@string/styles_hint"/>
            <Spinner
                android:id="@+id/stylesSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <LinearLayout
                android:layout_marginTop="@dimen/default_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">
                <Button
                    android:id="@+id/createBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:text="@string/create_hint"/>
                <Button
                    android:id="@+id/saveBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:text="@string/save_hint"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <FrameLayout
        android:id="@+id/blurContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <ImageView
            android:id="@+id/blurView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
    <include
        android:id="@+id/loadingElement"
        layout="@layout/loading_element"/>
</androidx.constraintlayout.widget.ConstraintLayout>