<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    android:gravity="center_vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:cardCornerRadius="25dp">
        <ImageView
            android:id="@+id/iconImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_background"
            android:contentDescription="@string/image_item_hint" />
    </androidx.cardview.widget.CardView>
    <TextView
        android:id="@+id/nameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        style="@style/bold_subtitle"
        android:text="@string/image_item_hint"
        android:layout_marginStart="10dp"/>
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ProgressBar
            android:id="@+id/loading"
            android:layout_gravity="center_vertical|end"
            android:layout_width="10dp"
            android:layout_height="10dp"/>
        <LinearLayout
            android:id="@+id/loadingFailed"
            android:layout_gravity="center_vertical|end"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:translationX="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline_hint"/>
            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/circle"
                android:backgroundTint="@android:color/holo_red_dark"
                android:layout_marginStart="@dimen/default_margin"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/loadingGrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:translationX="100dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online_hint"/>
            <LinearLayout
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:background="@drawable/circle"
                android:backgroundTint="@android:color/holo_blue_bright"
                android:layout_marginStart="@dimen/default_margin"/>
        </LinearLayout>
    </FrameLayout>
</LinearLayout>
