<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".ItemActivity">
    <LinearLayout
        android:id="@+id/parrent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <FrameLayout
            android:id="@+id/imageHolder"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:ignore="UselessParent">
            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iconImageView"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:src="@drawable/ic_launcher_background"
                android:scaleType="centerCrop"
                app:shapeAppearanceOverlay="@style/BottomRoundedCorners"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/circled_semi_black" />

            <TextView
                android:id="@+id/itemNameTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/pick_image_hint"
                style="@style/white_color_title"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:layout_gravity="end"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin">
                <ImageView
                    android:id="@+id/webImageView"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:src="@android:drawable/ic_menu_search"/>
                <ImageView
                    android:id="@+id/editImageView"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:src="@drawable/edit_icon"/>
                <ImageView
                    android:id="@+id/deleteImageView"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/default_margin"
                    android:src="@drawable/delete_icon"/>
            </LinearLayout>
        </FrameLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/main_container"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/bold_subtitle"
                android:text="@string/commands"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/commandRecycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/blurContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">
        <ImageView
            android:id="@+id/blurView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/create_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        app:backgroundTint="?attr/colorPrimary"
        app:tint="?attr/colorOnPrimary"
        app:fabSize="mini"/>
    <include
        android:id="@+id/loadingElement"
        layout="@layout/loading_element"/>
</androidx.constraintlayout.widget.ConstraintLayout>